user accounts and major reworks

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,8 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://theres.care/" />
 		<meta property="og:image" content="https://theres.care/assets/img/logo.png" />
+
+		<meta name="theme-color" content="#E4A0B7" />
 	</head>
 	<body>
 		%svelte.body%
